--- a/loop-functions/example/CMakeLists.txt
+++ b/loop-functions/example/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library(example_aggregation_loopfunc SHARED ExampleAggregationLoopFunc.h ExampleAggregationLoopFunc.cpp)
-target_link_libraries(example_aggregation_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)
+target_link_libraries(example_aggregation_loopfunc)
+#target_link_libraries(example_aggregation_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)
