--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,6 @@ if(ARGOS_BUILD_FOR_SIMULATOR)
 	include(SimLibrary.cmake)
 elseif(ARGOS_BUILD_FOR_EPUCK)
 	include(RealLibrary.cmake)
+elseif(ARGOS_BUILD_FOR_PSEUDO_REALITY)
+	include(PseudoRealityLibrary.cmake)
 endif(ARGOS_BUILD_FOR_SIMULATOR)
